# ocr-audio-workbench

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
app/: config.py  dependencies.py  logger.py  main.py
app/models/: audio.py  image.py  ocr.py  transcript.py
app/routers/: __init__.py  auth.py  books.py  chapters.py  export.py  images.py  ocr.py  text.py
app/schemas/: __init__.py  audio.py  export.py  hierarchy.py  image.py  ocr.py  transcript.py  user.py
app/services/: background_tasks.py  export_service.py  gemini_service.py  minio_service.py
docs/: FRONTEND_API_INTEGRATION.md
src/backend/: version.txt
src/backend/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  main.py
src/backend/app/models/: __init__.py  audio.py  hierarchy.py  image.py  ocr.py  transcript.py  user.py
src/backend/app/routers/: __init__.py  audios.py  auth.py  (+9 more)
src/backend/tests/: test_audios.py  test_books.py  test_chapters.py  test_export.py  test_images.py  test_search.py
src/frontend/: .env.example  app.py
src/frontend/.streamlit/: config.toml
src/frontend/components/: __init__.py  auth.py  ocr_status.py  transcription_status.py
src/frontend/pages/: __init__.py  book_management.py  instant_scan.py
src/frontend/services/: api_client.py  audio_handler.py  formatting_renderer.py  image_handler.py  state_manager.py  theme.py
src/frontend/utils/: formatting.py  logger.py  validators.py
tests/: conftest.py  test_auth.py  test_chapters.py  test_export.py  test_ocr.py  test_text_retrieval.py  test_transcription.py
tests/fixtures/: __init__.py
(+16 files in other folders)
