[project]
name = "folder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.42.18",
    "fastapi>=0.128.0",
    "google-genai>=0.1.0",
    "httpx>=0.28.1",
    "librosa>=0.11.0",
    "minio>=7.2.20",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "sqlalchemy>=2.0.45",
    "uvicorn>=0.40.0",
]
